tests/baselines/reference/checkSuperCallBeforeThisAccessing8.errors.txt
tests/cases/compiler/checkSuperCallBeforeThisAccessing8.ts(8,9): error TS17006: 'super' has to be called before 'this' accessing.


==== tests/cases/compiler/checkSuperCallBeforeThisAccessing8.ts (1 errors) ====
    class Base {
        constructor(...arg) {
        }
    }
    class Super extends Base {
        constructor() {
            var that = this;
            super();
            ~~~~~~~~
!!! error TS17006: 'super' has to be called before 'this' accessing.
        }
    }